[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Fonts/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 32
use_filter = true
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 26
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.431373 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.333333 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
START_SCENE = "res://Scenes/StartScene.tscn"
NEXT_SCENE = "res://Scenes/NextScene.tscn"

[node name="BackgroundImage" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.145098, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 13 )
text = "Main Menu"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 824.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 85
custom_constants/margin_left = 85

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 85.0
margin_right = 739.0
margin_bottom = 70.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 824.0
margin_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 85
custom_constants/margin_left = 85

[node name="NextSceneButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 85.0
margin_right = 739.0
margin_bottom = 71.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "Next Scene"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 824.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 85
custom_constants/margin_left = 85

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 85.0
margin_right = 739.0
margin_bottom = 71.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/NextSceneButton" to="." method="_on_NextSceneButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
